gcc/testsuite/g++.dg/cpp0x/decltype-33838.C
// { dg-options -std=c++0x }
// PR c++/33838
template<typename T> struct A
{
  __decltype (T* foo()); // { dg-error "expected|no arguments|accept" }
};
